cakephpsphinx/themes/cakephp/static/css/responsive.css
/**
 * Phone/phablet layout.
 */
@media (max-width: 767px) {
  .logo-cake img {
    margin-top: 20px;
    margin-bottom: 14px;
  }

  .navbar-right {
    float: right !important;
    margin-right: -15px;
  }

  .search-form {
    top: -21px;
  }

  .icon-social,
  .icon-irc,
  .icon-social-q {
    margin-bottom: 30px;
  }

  .submenu {
    background-color: #d33c44;
  }

  #wrap .twitter-typeahead {
    left: -240px; /* 60px less than width so icon is in box */
    width: 300px;
  }
  #wrap .tt-input {
    left: 240px;
  }
  #wrap .tt-input:focus {
    left: 0;
    width: 300px;
  }

  #wrap input[type="submit"] {
    height: 58px;
  }

  .nav-up {
    top: -600px;
  }

  .menu-title-m {
    margin-top: 180px;
  }

  .toggle-menu .fa {
    margin: 21px 0;
  }

  #sub {
    margin-top: 60px;
  }

  .git-frame iframe {
    padding-left: 34%;
  }

  .social-footer a {
    padding: 10px 6px;
  }

  .social {
    margin-bottom: 20px;
  }

  .social iframe {
    margin: 5px;
  }

  /* ---------------------- COOK BOOK ------------------------- */
  .page-container {
    padding-top: 20px;
  }

  .nav-btn {
    padding-top: 73px;
    padding-bottom: 17px;
  }

  .read-the-book a {
    margin: 15px 5px 22px;
  }

  .page-container .row {
    margin-left: -10px;
    margin-right: -10px;
  }

  .btn-nav {
    font-size: 11px;
  }

  #improve-slideout {
    bottom: 42px;
  }

  #improve-slideout-inner {
    bottom: 42px;
  }

  #back-to-contents {
    bottom: 0;
  }

  .page-contents {
    float: none;
    margin-left: 0;
  }

  .reference,
  .docutils {
    word-break: break-word;
  }

  h1 {
    font-size: 32px;
    line-height: 34px;
  }
  h2 {
    font-size: 28px;
    line-height: 36px;
  }
  h3,
  h4,
  h5,
  h6 {
    font-size: 24px;
    line-height: 30px;
  }
}

/**
 * Tablet Portrait layout.
 */
@media (min-width: 768px) and (max-width: 991px) {
  .search-form {
    top: -21px;
  }

  .menu > li > a:hover,
  .menu > li > a:focus,
  .menu > li:hover > a {
    color: rgb(202, 202, 202);
  }

  .menu > li > a {
    padding: 25px 10px;
  }

  .logo-cake img {
    margin-top: 15px;
    margin-bottom: 14px;
  }

  /* ---------------------- COOK BOOK ------------------------- */

  .page-container {
    padding-top: 20px;
  }

  #wrap .twitter-typeahead {
    left: -390px; /* 60px less than width so icon is in box */
    width: 450px;
  }
  #wrap .tt-input {
    left: 390px;
  }
  #wrap .tt-input:focus {
    left: 0;
    width: 450px;
  }

  #wrap input[type="submit"] {
    height: 58px;
  }

  #improve-slideout {
    bottom: 42px;
  }

  #improve-slideout-inner {
    bottom: 42px;
  }
  #back-to-contents {
    bottom: 0;
  }
  .social {
    margin-bottom: 44px;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  /*CSS LIDO EM DISPOSITIVOS ATÉ 1199 PX DE LARGURA*/
  .menu > li > a {
    padding: 25px 10px;
  }

  .fa-menu-title {
    font-size: 17px;
    display: block;
    padding-bottom: 8px;
  }
  /* ---------------------- COOK BOOK ------------------------- */

  .t-language h6 {
    font-size: 9px;
  }

  .dropdown > a {
    font-size: 12px;
    padding: 5px 5px !important;
  }
}

/* Site menu in modal window */
#modal .menu {
  float: none;
}
#modal .menu > li {
  float: none;
  display: block;
  width: 100%;
  margin-bottom: 1em;
}
#modal .menu .fa-chevron-down {
  display: none;
}
#modal .menu > li {
  background: #aaabac;
  border-bottom: 2px solid #aaabac;
}
#modal .menu > li > a {
  color: #363638;
  font-weight: bold;
  display: block;
}
#modal .menu a {
  color: #667;
  padding: 10px;
}
#modal .menu-title {
  padding: 2px 0 0 10px;
  color: #363637;
}
#modal .megamenu,
#modal .submenu .submenu,
#modal .submenu {
  margin: 2px 2px 0 2px;
  padding: 0;
  background: #f1f1f1;
  min-width: auto;
  width: auto;
  top: 0;
  left: 0;
  position: relative;
  z-index: auto;
}
#modal .megamenu-list {
  padding-top: 5px;
}
#modal .megamenu-list li {
  padding: 0;
}
#modal .col-3 {
  padding: 0;
  width: 100%;
  border-bottom: 2px solid #aaabac;
  margin-bottom: 0;
}
#modal .col-3:last-child {
  border-bottom: 0;
}

/* Book nav in modal menu */
#modal .back-book:hover,
#modal .back-book {
  background: transparent;
}
#modal .back-book h6,
#modal .back-book h2 {
  color: #363638;
}
#modal .t-language h6 {
  text-align: left;
  color: #363638;
}
#modal .search,
#modal .dropdown .fa-chevron-down {
  display: none;
}
#modal .navbar-nav {
  float: none;
}
#modal .dropdown-toggle {
  display: inline-block;
  position: static;
}
#modal .dropdown-menu {
  float: none;
  display: inline;
  position: static;
  background: transparent;
  box-shadow: none;
}
#modal .dropdown-menu li {
  float: none;
  display: inline-block;
}

@media (min-width: 1200px) {
  .offline-download ul,
  .offline-download p {
    padding: 0 100px;
  }

  .offline-download a {
    margin: 25px 5px;
  }
}

